sidebar collapsing margin fix

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -1461,7 +1461,7 @@ button.navbar-toggler.navbar-toggler-right.collapsed{
 .block-views-blockannouncements-most-recent-list-block-1 {
 	border: 5px solid $plum!important;
 	padding: 0.9375rem!important;
-	margin-bottom: 0!important;
+	/*margin-bottom: 0!important;*/
 
 	/*@include media-breakpoint-only(landscape_phone) {  
 		width:50%;
